--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <title>Welcome</title>
 </head>
 <body>
-    <h1>Welcome to My Website!!!</h1>
+    <h1>Welcome to My Website!</h1>
     <nav>
         <a href="about.html">About Us</a> | 
         <a href="contact.html">Contact</a>
